# paperpass

./: .gitignore  Cargo.toml  README.md  build.rs  configspaperpass.toml  justfile
.forgejo/.github/workflows/: build.yml  release.yml
.forgejo/workflows/: build.yml  release-github.yml  release.yml
.github/workflows/: build.yml  release.yml
aur/: .gitignore  PKGBUILD
nix/: 0001-cargo-lock.patch  paperpass-git.nix
packaging/arch/: PKGBUILD
src/: main.rs
src/config/: configfile.rs  mod.rs  pgpconfig.rs  showconfig.rs
src/errors/: err.rs
src/gpg/: helper.rs  lock.rs  mod.rs  unlock.rs
src/options/: banner.rs  command_options.rs  helpstdout.rs  init_options.rs  mod.rs  opt.rs  options.rs
src/utils/: binaries.rs  clipboard.rs  delete.rs  edit.rs  fromcsv.rs  genpass.rs  git.rs  insert.rs  ls.rs  manage_env.rs  migrate.rs  mod.rs  show.rs  totp.rs
