[package]
name = "paperpass"
version = "1.1.4"
edition = "2024"

[dependencies]
chrono = "0.4.42"
colored = "3.0.0"
crossterm = "0.29.0"
serde = { version = "1.0.226", features = ["derive"] }
toml = "0.9.7"
totp-rs = { version = "5.7.0", features = ["otpauth", "url"] }

[build-dependencies]
chrono = "0.4.42"

[target.aarch64-unknown-linux-musl]
cc = "aarch64-linux-musl-gcc"
cxx = "aarch64-linux-musl-g++"
ar = "aarch64-linux-musl-ar"
linker = "aarch64-linux-musl-gcc"


